--- a/learnElementUI/响应式-learn1/package.json
+++ b/learnElementUI/响应式-learn1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "element-learn1",
+  "name": "--learn1",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.2.2",
     "element-plus": "^2.2.28",
     "vue": "^3.2.45"
   },
