--- a/learnAxios/package.json
+++ b/learnAxios/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-learn1",
+  "name": "learnaxios",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -8,11 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "axios": "^1.2.2",
+    "element-plus": "^2.2.28",
+    "vue": "^3.2.45"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "vite": "^4.0.0"
+    "mockjs": "^1.1.0",
+    "vite": "^4.0.0",
+    "vite-plugin-mock": "^2.9.6"
   }
 }
