--- a/learnAxios/package.json
+++ b/learnAxios/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.2.2",
     "element-plus": "^2.2.28",
+    "json5": "^2.2.3",
     "vue": "^3.2.45"
   },
   "devDependencies": {
